@@ -1,3 +1,7 @@
+2011-10-27  Albert Chu <chu11@llnl.gov>
+
+	* common/src/toolsdr/: Code cleanup, make internal functions static.
+	
 2011-10-24  Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/src/fru-parse/ipmi-fru-parse-data.c: Add forgotten headers.
